ajout de systeme de recommandation depuisq la base puis avec gemini. Amelioration de l'interface et ajout de load spin